# SampleCustomSystemTray

./: LICENSE  README.md
src/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
src/qml/: Main.qml  SystemTrayIcon.qml  SystemTrayMenu.qml
